# automata_theory

str_parser/: .gitignore  CMakeLists.txt  main.cpp
str_parser/automat_visualiz/: my_state_machine_sm.dot
str_parser/headers/: flex_recognizer.h  recognizer.h  regex_recognizer.h  smc_recognizer.h
str_parser/ioters/: io.h  io_file.cpp  io_file.h  io_standart.cpp  io_standart.h
str_parser/realization/: helper_for_parser.h  regex_recognizer.cpp  smc_recognizer.cpp
str_parser/realization/flex_recognizer/: CMakelists.txt  flex.cpp  flex_realization.cpp  lex.l  lex.yy.cc  lexer.l  test
str_parser/realization/smc_recognizer/: Parser.cpp  Parser.h  Parser.sm  Parser_sm.cpp  Parser_sm.h  smc_recognizer.cpp  statemap.h
str_parser/str_generator/: str_generator.cpp
